--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-api",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "FeatureBook's API",
   "main": "index.js",
   "files": [
@@ -32,7 +32,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jkroepke/featurebook-gherkin": "^1.0.0",
+    "@jkroepke/featurebook-gherkin": "^1.0.0-beta.0",
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
