--- a/packages/featurebook-gherkin/package.json
+++ b/packages/featurebook-gherkin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-gherkin",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "Gherkin parser for FeatureBook",
   "files": [
     "lib",
