--- a/packages/featurebook-html/package.json
+++ b/packages/featurebook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-html",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "FeatureBook's HTML converter",
   "main": "index.js",
   "files": [
@@ -33,8 +33,8 @@
   "license": "MIT",
   "dependencies": {
     "bash-color": "^0.0.4",
-    "@jkroepke/featurebook-api": "^1.0.0",
-    "@jkroepke/featurebook-markdown": "^1.0.0",
+    "@jkroepke/featurebook-api": "^1.0.0-beta.0",
+    "@jkroepke/featurebook-markdown": "^1.0.0-beta.0",
     "fs-extra": "^8.1.0",
     "pug": "^2.0.4",
     "lodash": "^4.17.15"
