--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-pdf",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "FeatureBook's PDF converter",
   "main": "index.js",
   "files": [
@@ -33,7 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "bash-color": "^0.0.4",
-    "@jkroepke/featurebook-api": "^1.0.0",
+    "@jkroepke/featurebook-api": "^1.0.0-beta.0",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "pdfkit": "^0.10.0"
