--- a/packages/featurebook-cli/package.json
+++ b/packages/featurebook-cli/package.json
@@ -24,11 +24,15 @@
       "url": "http://github.com/jkroepke/"
     }
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">= 8"
   },
   "license": "Apache-2.0",
   "devDependencies": {
     "commander": "^2.20.0"
-  }
+  },
+  "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
