--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -39,6 +39,9 @@
       "url": "http://github.com/jkroepke/"
     }
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jkroepke/featurebook-js.git"
@@ -58,5 +61,6 @@
     "bash-color": "^0.0.4",
     "commander": "^2.20.0",
     "opener": "^1.5.1"
-  }
+  },
+  "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
