--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -23,6 +23,9 @@
       "url": "http://github.com/jkroepke/"
     }
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jkroepke/featurebook-js.git"
@@ -40,5 +43,6 @@
     "codeclimate-test-reporter": "^0.5.1",
     "istanbul": "^0.4.5",
     "mocha": "^6.2.0"
-  }
+  },
+  "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
