--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
+    "lint": "eslint index.js lib/*.js",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
     "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
@@ -35,10 +36,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jkroepke/featurebook-gherkin": "^1.0.0-beta.3",
-    "minimatch": "^3.0.4"
+    "cucumber-messages": "^7.0.0",
+    "fast-glob": "^3.1.0",
+    "gherkin": "^8.1.1",
+    "ignore": "^5.1.4"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "chai": "^4.2.0",
     "codeclimate-test-reporter": "^0.5.1",
     "istanbul": "^0.4.5",
