--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
+    "lint": "eslint lib/*.js index.js",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
     "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
@@ -42,6 +43,9 @@
     "pdfkit": "^0.10.0"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "chai": "^4.2.0",
     "codeclimate-test-reporter": "^0.5.1",
     "istanbul": "^0.4.5",
