--- a/packages/featurebook-serve/package.json
+++ b/packages/featurebook-serve/package.json
@@ -13,6 +13,7 @@
     "test": "npm run test-lib & npm run test-public",
     "test-lib": "mocha test/lib/**/*.spec.js --recursive",
     "test-public": "karma start test/karma.conf.js",
+    "lint": "eslint lib/*.js index.js",
     "coverage": "istanbul cover --dir coverage/lib node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
     "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lib/lcov.info && codeclimate-test-reporter < ./coverage/public/lcov.info"
   },
@@ -42,17 +43,19 @@
     "@jkroepke/featurebook-api": "^1.0.0-beta.3",
     "@jkroepke/featurebook-markdown": "^1.0.0-beta.5",
     "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
-    "lodash": "^4.17.15"
+    "fs-extra": "^8.1.0"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "bower": "^1.8.8",
     "chai": "^4.2.0",
     "codeclimate-test-reporter": "^0.5.1",
     "istanbul": "^0.4.5",
     "jasmine-core": "^3.4.0",
     "karma": "^4.1.0",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage": "^2.0.1",
     "karma-jasmine": "^2.0.1",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
