--- a/packages/featurebook-serve/package.json
+++ b/packages/featurebook-serve/package.json
@@ -42,8 +42,7 @@
   "dependencies": {
     "@jkroepke/featurebook-api": "^1.0.0-beta.3",
     "@jkroepke/featurebook-markdown": "^1.0.0-beta.5",
-    "express": "^4.17.1",
-    "fs-extra": "^8.1.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
