--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -59,7 +59,7 @@
     "@jkroepke/featurebook-html": "^1.0.0-beta.6",
     "@jkroepke/featurebook-pdf": "^1.0.0-beta.3",
     "@jkroepke/featurebook-serve": "^1.0.0-beta.5",
-    "bash-color": "^0.0.4",
+    "colors": "^1.4.0",
     "opener": "^1.5.1",
     "yargs": "^15.0.2"
   },
