--- a/.github/workflows/featurebook-markdown.yml
+++ b/.github/workflows/featurebook-markdown.yml
@@ -10,7 +10,7 @@ jobs:
   node:
     strategy:
       matrix:
-        node: [ '8', '10', '12' ]
+        node: [ '10', '12' ]
       fail-fast: true
 
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: npm ci
-        working-directory: packages/featurebook-markdwon
+        working-directory: packages/featurebook-markdown
       - run: npm run lint
         working-directory: packages/featurebook-markdown
       - run: npm run test
