--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -13,15 +13,16 @@
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
     "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
-  "author": {
-    "name": "Daniel Pacak",
-    "email": "pacak.daniel@gmail.com"
+  "author":
+  {
+    "name": "Jan-Otto Kröpke",
+    "email": "npm@jkropke.de",
+    "url": "https://github.com/jkroepke/"
   },
   "contributors": [
     {
-      "name": "Jan-Otto Kröpke",
-      "email": "npm@jkropke.de",
-      "url": "http://github.com/jkroepke/"
+      "name": "Daniel Pacak",
+      "email": "pacak.daniel@gmail.com"
     }
   ],
   "publishConfig": {
@@ -32,7 +33,7 @@
     "url": "https://github.com/jkroepke/featurebook-js.git"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 10"
   },
   "license": "MIT",
   "dependencies": {
