--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -29,8 +29,7 @@
     "beautiful",
     "markdown"
   ],
-  "author":
-  {
+  "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
     "url": "https://github.com/jkroepke/"
