--- a/packages/featurebook-pdf/.eslintrc.json
+++ b/packages/featurebook-pdf/.eslintrc.json
@@ -15,6 +15,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
     }
 }
