--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -20,8 +20,7 @@
   "engines": {
     "node": ">= 10"
   },
-  "author":
-  {
+  "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
     "url": "https://github.com/jkroepke/"
@@ -38,9 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "@jkroepke/featurebook-api": "^1.0.0-beta.3",
-    "bash-color": "^0.0.4",
-    "fs-extra": "^8.1.0",
-    "lodash": "^4.17.15",
+    "colors": "^1.4.0",
     "pdfkit": "^0.10.0"
   },
   "devDependencies": {
