--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -10,11 +10,9 @@
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
     "lint": "eslint index.js lib/*.js",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
-    "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
+    "coverage": "nyc npm run test"
   },
-  "author":
-  {
+  "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
     "url": "https://github.com/jkroepke/"
@@ -37,19 +35,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "cucumber-messages": "^7.0.0",
+    "cucumber-messages": "^8.0.0",
     "fast-glob": "^3.1.0",
-    "gherkin": "^8.1.1",
+    "gherkin": "^9.0.0",
     "ignore": "^5.1.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "chai": "^4.2.0",
-    "codeclimate-test-reporter": "^0.5.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.2.0"
+    "nyc": "^15.0.0",
+    "mocha": "^6.2.2"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
