--- a/packages/featurebook-html/package.json
+++ b/packages/featurebook-html/package.json
@@ -10,11 +10,9 @@
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
     "lint": "eslint lib/*.js index.js",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec test/lib/**/*.spec.js",
-    "coveragetocodeclimate": "codeclimate-test-reporter < ./coverage/lcov.info"
+    "coverage": "nyc npm run test"
   },
-  "author":
-  {
+  "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
     "url": "https://github.com/jkroepke/"
@@ -45,13 +43,12 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "chai": "^4.2.0",
-    "codeclimate-test-reporter": "^0.5.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.2.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "nyc": "^15.0.0",
+    "mocha": "^6.2.2"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
