--- a/packages/featurebook-markdown/package.json
+++ b/packages/featurebook-markdown/package.json
@@ -11,8 +11,7 @@
     "test": "mocha --recursive",
     "lint": "eslint lib/*.js index.js"
   },
-  "author":
-  {
+  "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
     "url": "https://github.com/jkroepke/"
@@ -38,10 +37,10 @@
     "markdown-it": "^10.0.0"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "mocha": "^6.2.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
