--- a/packages/featurebook-html/package.json
+++ b/packages/featurebook-html/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
-    "lint": "eslint lib/*.js index.js",
+    "lint": "eslint src/*.js index.js",
     "coverage": "nyc npm run test"
   },
   "author": {
@@ -31,7 +31,7 @@
     "url": "https://github.com/jkroepke/featurebook-js.git"
   },
   "engines": {
-    "node": ">= 10"
+    "node": ">= 8"
   },
   "license": "MIT",
   "dependencies": {
@@ -46,9 +46,9 @@
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "nyc": "^15.0.0",
-    "mocha": "^6.2.2"
+    "eslint-plugin-import": "^2.20.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
