--- a/packages/featurebook-markdown/package.json
+++ b/packages/featurebook-markdown/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "mocha --recursive",
-    "lint": "eslint lib/*.js index.js"
+    "lint": "eslint src/*.js index.js"
   },
   "author": {
     "name": "Jan-Otto Kröpke",
@@ -30,18 +30,19 @@
     "url": "https://github.com/jkroepke/featurebook-js.git"
   },
   "engines": {
-    "node": ">= 10"
+    "node": ">= 8"
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "markdown-it": "^10.0.0"
+    "markdown-it": "^10.0.0",
+    "object.fromentries": "^2.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "mocha": "^6.2.0"
+    "eslint-plugin-import": "^2.20.0",
+    "mocha": "^7.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
