--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
-    "lint": "eslint lib/*.js index.js",
+    "lint": "eslint src/*.js index.js",
     "coverage": "nyc npm run test"
   },
   "repository": {
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/jkroepke/featurebook-js.git"
   },
   "engines": {
-    "node": ">= 10"
+    "node": ">= 8"
   },
   "author": {
     "name": "Jan-Otto Kröpke",
@@ -43,9 +43,9 @@
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "nyc": "^15.0.0",
-    "mocha": "^6.2.0"
+    "eslint-plugin-import": "^2.20.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
