--- a/packages/featurebook-serve/package.json
+++ b/packages/featurebook-serve/package.json
@@ -13,7 +13,7 @@
     "test": "npm run test-lib & npm run test-public",
     "test-lib": "mocha test/lib/**/*.spec.js --recursive",
     "test-public": "karma start test/karma.conf.js",
-    "lint": "eslint lib/*.js index.js",
+    "lint": "eslint src/*.js index.js",
     "coverage": "nyc npm run test"
   },
   "author": {
@@ -35,7 +35,7 @@
     "url": "git+https://github.com/jkroepke/featurebook-js.git"
   },
   "engines": {
-    "node": ">= 10"
+    "node": ">= 8"
   },
   "license": "MIT",
   "dependencies": {
@@ -48,15 +48,15 @@
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "nyc": "^15.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "jasmine-core": "^3.4.0",
     "karma": "^4.1.0",
     "karma-coverage": "^2.0.1",
-    "karma-jasmine": "^2.0.1",
+    "karma-jasmine": "^3.1.0",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "mocha": "^6.2.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
     "phantomjs-prebuilt": "^2.1.16"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
