--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "mocha test/lib/**/*.spec.js --recursive",
-    "lint": "eslint src/*.js index.js",
+    "lint": "eslint lib/*.js index.js",
     "coverage": "nyc npm run test"
   },
   "repository": {
@@ -37,7 +37,10 @@
   "dependencies": {
     "@jkroepke/featurebook-api": "^1.0.0-beta.3",
     "colors": "^1.4.0",
-    "pdfkit": "^0.11.0"
+    "commonmark": "^0.29.1",
+    "pdfkit": "^0.11.0",
+    "pdfkit-commonmark": "^0.2.0",
+    "voilab-pdf-table": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
