--- a/packages/featurebook-markdown/.eslintrc.json
+++ b/packages/featurebook-markdown/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
@@ -14,8 +15,16 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
-  "rules": {
-    "no-console": "off",
-    "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
-  }
+    "rules": {
+        "no-console": "off",
+        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
+    },
+    "overrides": [
+        {
+            "files": "*.spec.js",
+            "rules": {
+                "no-unused-expressions": "off"
+            }
+        }
+    ]
 }
