--- a/packages/featurebook-serve/.eslintrc.json
+++ b/packages/featurebook-serve/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
@@ -16,5 +17,13 @@
     },
     "rules": {
         "no-console": "off"
-    }
+    },
+    "overrides": [
+        {
+            "files": "*.spec.js",
+            "rules": {
+                "no-unused-expressions": "off"
+            }
+        }
+    ]
 }
