--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -11,7 +11,7 @@
   "preferGlobal": true,
   "scripts": {
     "test": "mocha --recursive",
-    "lint": "eslint {bin,cmds}/*.js"
+    "lint": "eslint {bin,cmds,test}/*.js"
   },
   "keywords": [
     "gherkin",
@@ -66,7 +66,8 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0"
+    "eslint-plugin-import": "^2.20.0",
+    "mocha": "^7.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
 }
