--- a/.github/workflows/featurebook-pdf.yml
+++ b/.github/workflows/featurebook-pdf.yml
@@ -31,6 +31,6 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: 18908f02e2f04c41f84ac447800fdca9a1fae3a15ba319228a4484408d827111
         with:
-          coverageCommand: cd packages/featurebook-pdf; npm run coverage
+          coverageCommand: cd packages/featurebook-pdf && npm run coverage
           debug: true
 
