--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "mocha",
     "lint": "eslint index.js {lib,test}/*.js",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test"
   },
   "repository": {
     "type": "git",
