--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -16,11 +16,18 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npx lerna bootstrap
-      - name: code climate
-        uses: paambaati/codeclimate-action@v2.4.0
+      - run: npm bootstrap
+      - run: npx lerna run coverage
+      - run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          for f in packages/*; do
+            if [ -d $f ]; then
+              echo $f;
+              ./cc-test-reporter format-coverage -t lcov -o coverage/coverage.${f//\//-}.json $f/coverage/lcov.info;
+            fi
+          done;
+          ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
+          ./cc-test-reporter upload-coverage -i coverage/coverage.total.json;
         env:
           CC_TEST_REPORTER_ID: 18908f02e2f04c41f84ac447800fdca9a1fae3a15ba319228a4484408d827111
-        with:
-          coverageCommand: npx lerna run coverage
-          debug: true
