--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -24,7 +24,7 @@ jobs:
           for f in packages/*; do
             if [ -f $f/coverage/lcov.info ]; then
               echo $f;
-              ./cc-test-reporter format-coverage -t lcov -o coverage/coverage.${f//\//-}.json $f/coverage/lcov.info;
+              ./cc-test-reporter format-coverage -t lcov -o "coverage/coverage.${f//\//-}.json" -p "$f" "$f/coverage/lcov.info";
             fi
           done;
           ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
