--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -32,8 +32,9 @@ jobs:
           chmod +x ./cc-test-reporter
           for f in packages/*; do
             if [ -f $f/coverage/lcov.info ]; then
-              echo $f;
-              ./cc-test-reporter format-coverage -t lcov -o "coverage/coverage.${f//\//-}.json" -p "$f" "$f/coverage/lcov.info";
+              cd "$f";
+              ../../cc-test-reporter format-coverage -t lcov -o "../../coverage/coverage.${f//\//-}.json" -p "$f" "$f/coverage/lcov.info";
+              cd ".."
             fi
           done;
           ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
