--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -33,8 +33,8 @@ jobs:
           for f in packages/*; do
             if [ -f $f/coverage/lcov.info ]; then
               cd "$f";
-              ../../cc-test-reporter format-coverage -t lcov -o "../../coverage/coverage.${f//\//-}.json" -p "$f" "$f/coverage/lcov.info";
-              cd ".."
+              ../../cc-test-reporter format-coverage -t lcov -o "../../coverage/coverage.${f//\//-}.json" -p "$PWD" "$f/coverage/lcov.info";
+              cd "../.."
             fi
           done;
           ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
