--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,6 @@
 root = true
 
 [*]
-
 indent_style = space
 indent_size = 2
 
@@ -13,3 +12,9 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.html]
+indent_size = 4
+
+[.eslintrc.json]
+indent_size = 4
