--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -7,6 +7,23 @@ on:
       - master
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm ci
+      - run: npm run lint
   coverage:
     runs-on: ubuntu-latest
     steps:
@@ -32,9 +49,9 @@ jobs:
           chmod +x ./cc-test-reporter
           for f in packages/*; do
             if [ -f $f/coverage/lcov.info ]; then
-              cd "$f";
-              ../../cc-test-reporter format-coverage -t lcov -o "../../coverage/coverage.${f//\//-}.json" -p "$PWD" "coverage/lcov.info";
-              cd "../.."
+              echo "$f"
+              sed -i 's!SF:!SF:$f/!g' "$f/coverage/lcov.info"
+              ./cc-test-reporter format-coverage -t lcov -o "coverage/coverage.${f//\//-}.json" "$f/coverage/lcov.info"
             fi
           done;
           ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
