--- a/packages/featurebook-markdown/package.json
+++ b/packages/featurebook-markdown/package.json
@@ -8,8 +8,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "mocha",
-    "lint": "eslint index.js {lib,test}/*.js"
+    "test": "mocha"
   },
   "author": {
     "name": "Jan-Otto Kröpke",
@@ -39,9 +38,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0",
     "mocha": "^7.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
