--- a/packages/featurebook-serve/.eslintrc.json
+++ b/packages/featurebook-serve/.eslintrc.json
@@ -1,29 +1,1 @@
-{
-    "env": {
-        "commonjs": true,
-        "es6": true,
-        "node": true,
-        "mocha": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "rules": {
-        "no-console": "off"
-    },
-    "overrides": [
-        {
-            "files": "*.spec.js",
-            "rules": {
-                "no-unused-expressions": "off"
-            }
-        }
-    ]
-}
+../../.eslintrc.json
