--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -10,8 +10,7 @@
   ],
   "preferGlobal": true,
   "scripts": {
-    "test": "mocha --recursive",
-    "lint": "eslint {bin,cmds,test}/*.js"
+    "test": "mocha"
   },
   "keywords": [
     "gherkin",
@@ -64,9 +63,6 @@
     "yargs": "^15.1.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0",
     "mocha": "^7.0.0"
   },
   "gitHead": "d95165a5fdf5501ec668955acaf21c60801da1c2"
