--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -58,7 +58,7 @@ jobs:
           for f in packages/*; do
             if [ -f $f/coverage/lcov.info ]; then
               echo "$f"
-              sed -i 's!SF:!SF:$f/!g' "$f/coverage/lcov.info"
+              sed -i "s!SF:!SF:$f/!g" "$f/coverage/lcov.info"
               ./cc-test-reporter format-coverage -t lcov -o "coverage/coverage.${f//\//-}.json" "$f/coverage/lcov.info"
             fi
           done;
