--- a/.github/workflows/codeclimate.yml
+++ b/.github/workflows/codeclimate.yml
@@ -1,31 +1,12 @@
-name: CI featurebook-js
+name: CI coverage
 
 on:
-  pull_request:
   push:
     branches:
       - master
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Setup cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npm ci
-      - run: npx lerna bootstrap
-      - run: npm run lint
-  coverage:
+  codeclimate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -45,7 +26,6 @@ jobs:
       - run: npx lerna run coverage
       - name: codeclimate
         run: |
-          set -x
           curl -fsSL https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
           for f in packages/*; do
