--- a/packages/featurebook-api/package.json
+++ b/packages/featurebook-api/package.json
@@ -11,6 +11,22 @@
     "test": "mocha --recursive",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test"
   },
+  "keywords": [
+    "gherkin",
+    "cucumber",
+    "editor",
+    "xp",
+    "bdd",
+    "attd",
+    "feature",
+    "specification",
+    "documentation",
+    "browser",
+    "viewer",
+    "cute",
+    "beautiful",
+    "markdown"
+  ],
   "author": {
     "name": "Jan-Otto Kröpke",
     "email": "npm@jkropke.de",
