--- a/packages/featurebook-markdown/package.json
+++ b/packages/featurebook-markdown/package.json
@@ -42,7 +42,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jkroepke/featurebook-js.git"
+    "url": "github:jkroepke/featurebook-js",
+    "directory": "packages/featurebook-markdown"
   },
   "engines": {
     "node": ">= 8"
