--- a/packages/featurebook-serve/package.json
+++ b/packages/featurebook-serve/package.json
@@ -47,7 +47,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jkroepke/featurebook-js.git"
+    "url": "github:jkroepke/featurebook-js",
+    "directory": "packages/featurebook"
   },
   "engines": {
     "node": ">= 8"
