--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -44,7 +44,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jkroepke/featurebook-js.git"
+    "url": "github:jkroepke/featurebook-js",
+    "directory": "packages/featurebook"
   },
   "bugs": {
     "url": "https://github.com/jkroepke/featurebook-js/issues"
