--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -56,12 +56,14 @@
   },
   "dependencies": {
     "@jkroepke/featurebook-api": "^2.0.0-beta.1",
-    "@jkroepke/featurebook-html": "^2.0.0-beta.1",
-    "@jkroepke/featurebook-pdf": "^2.0.0-beta.1",
-    "@jkroepke/featurebook-serve": "^2.0.0-beta.1",
     "colors": "^1.4.0",
     "opener": "^1.5.1",
     "yargs": "^15.1.0"
+  },
+  "optionalDependencies": {
+    "@jkroepke/featurebook-html": "^2.0.0-beta.1",
+    "@jkroepke/featurebook-pdf": "^2.0.0-beta.1",
+    "@jkroepke/featurebook-serve": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "mocha": "^7.0.0"
