--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
-    "husky": "^4.0.10",
+    "husky": "^4.2.1",
     "lerna": "^3.20.2",
-    "lint-staged": "^10.0.0-beta.15"
+    "lint-staged": "^10.0.2"
   },
   "husky": {
     "hooks": {
