Add missing cmds at featurebook package

--- a/packages/featurebook/package.json
+++ b/packages/featurebook/package.json
@@ -6,7 +6,8 @@
     "featurebook": "./bin/featurebook.js"
   },
   "files": [
-    "bin"
+    "/bin",
+    "/cmds"
   ],
   "preferGlobal": true,
   "scripts": {
