--- a/packages/featurebook-pdf/package.json
+++ b/packages/featurebook-pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-pdf",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "description": "FeatureBook's PDF converter",
   "main": "index.js",
   "files": [
@@ -51,7 +51,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jkroepke/featurebook-api": "^2.0.0-beta.2",
+    "@jkroepke/featurebook-api": "^2.0.0",
     "colors": "^1.4.0",
     "jsdom": "^16.0.1",
     "markdown2pdfmake": "^1.1.0",
