--- a/packages/featurebook-serve/package.json
+++ b/packages/featurebook-serve/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jkroepke/featurebook-serve",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "description": "FeatureBook's HTTP server",
   "main": "index.js",
   "files": [
@@ -55,8 +55,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jkroepke/featurebook-api": "^2.0.0-beta.2",
-    "@jkroepke/featurebook-markdown": "^2.0.0-beta.2",
+    "@jkroepke/featurebook-api": "^2.0.0",
+    "@jkroepke/featurebook-markdown": "^2.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
