Add resources to npm publish

--- a/packages/featurebook-html/package.json
+++ b/packages/featurebook-html/package.json
@@ -4,6 +4,7 @@
   "description": "FeatureBook's HTML converter",
   "main": "index.js",
   "files": [
+    "resources",
     "lib",
     "index.js"
   ],
